CLDR-15707 Survey Tool hung threads; make cldr-apps-webdriver work
-Update tests and data files to correspond to current Survey Tool

-Fix admin login url syntax

-Use assertTrue for each main test

-New SurveyDriverLog.java to encapsulate logging